# explorer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.claude/commands/openspec/: apply.md  archive.md  proposal.md
crates/explorer-app/: Cargo.toml
crates/explorer-app/src/: main.rs  quick_access.rs
crates/explorer-common/: Cargo.toml
crates/explorer-common/src/: types.rs
crates/explorer-component/: Cargo.toml
crates/explorer-component/src/: breadcrumb.rs  file_list.rs  icon.rs  layout.rs  lib.rs  panel_title_bar.rs  resizable.rs  sidebar.rs  theme.rs  title_bar.rs
crates/explorer-component/src/list/: grouped.rs  mod.rs  virtual_list.rs
crates/explorer-storage/: Cargo.toml
crates/explorer-storage/src/: error.rs  lib.rs  provider.rs  types.rs
crates/providers/explorer-local-provider/: Cargo.toml
crates/providers/explorer-local-provider/src/: lib.rs
docs/: 开始任务.md
openspec/: AGENTS.md  project.md
openspec/changes/archive/2025-12-22-init-project-structure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-22-init-project-structure/specs/file-list/: spec.md
openspec/changes/archive/2025-12-22-init-project-structure/specs/layout/: spec.md
openspec/changes/archive/2025-12-22-init-project-structure/specs/project-structure/: spec.md
openspec/changes/archive/2025-12-22-init-project-structure/specs/storage/: spec.md
openspec/changes/archive/2025-12-22-ui-enhancements/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-23-add-panel-split/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-23-add-panel-split/specs/layout/: spec.md
openspec/changes/archive/2025-12-23-add-panel-split/specs/ui-components/: spec.md
openspec/changes/archive/2025-12-24-enhance-ui-interactions/: design.md  proposal.md
openspec/changes/archive/2025-12-24-enhance-ui-interactions/specs/ui-components/: spec.md
openspec/changes/archive/2025-12-25-add-virtual-list-component/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-25-add-virtual-list-component/specs/ui-components/: spec.md
openspec/changes/enhance-ui-interactions/: tasks.md
openspec/changes/enhance-ui-interactions/specs/file-list/: spec.md
openspec/changes/enhance-ui-interactions/specs/ui-components/: spec.md
openspec/specs/file-list/: spec.md
openspec/specs/layout/: spec.md
openspec/specs/project-structure/: spec.md
openspec/specs/storage/: spec.md
openspec/specs/ui-components/: spec.md
