[workspace]
resolver = "2"
members = [
    "crates/explorer-app",
    "crates/explorer-common",
    "crates/explorer-component",
    "crates/explorer-storage",
    "crates/providers/explorer-local-provider",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
explorer-common = { path = "crates/explorer-common" }
explorer-component = { path = "crates/explorer-component" }
explorer-storage = { path = "crates/explorer-storage" }
explorer-local-provider = { path = "crates/providers/explorer-local-provider" }

gpui = { git = "https://github.com/zed-industries/zed" }

anyhow = { version = "1" }
async-trait = { version = "0.1" }
dirs = { version = "5" }
mime_guess = { version = "2" }
rust-embed = {version = "8"}
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
smol = { version = "2" }
thiserror = { version = "2" }
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
