[package]
name = "explorer-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "explorer"
path = "src/main.rs"

[dependencies]
explorer-common.workspace = true
explorer-component.workspace = true
explorer-storage.workspace = true
explorer-local-provider.workspace = true

gpui.workspace = true

anyhow.workspace = true
dirs.workspace = true
tokio = { workspace = true }

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
